# hydrone_deep_rl_lars

./: README.md
hydrone_aerial_deep_rl/: CMakeLists.txt  package.xml
hydrone_aerial_deep_rl/launch/: ddpg.launch  hydrone_aerial_deep_rl.launch  hydrone_aerial_deep_rl_2.launch  sac.launch  spawn_mav.launch
hydrone_aerial_deep_rl/scripts/: combination_obstacle.py  ddpg_stage_1.py  environment_stage_1.py  respawnGoal.py  sac_stage_1.py  velocity.py
hydrone_aerial_deep_rl/scripts/SAC_Models/world/: 1000_policy_net.pth  (+3 more)
hydrone_aerial_deep_rl/worlds/: stage_1.world  stage_2.world
hydrone_aerial_description/: CMakeLists.txt  package.xml
hydrone_aerial_description/urdf/: hydrone.xacro  hydrone_aerial_base.xacro  mav_generic_odometry_sensor.gazebo  multirotor_base.xacro
hydrone_aerial_gazebo/: CMakeLists.txt  package.xml
hydrone_aerial_gazebo/models/hydrone_square/: model.config  model.sdf
hydrone_aerial_gazebo/resource/: lee_controller_hydrone_aerial.yaml
hydrone_aerial_gazebo/worlds/: aerial.world
hydrone_aerial_underwater_deep_rl/: package.xml
hydrone_aerial_underwater_deep_rl/launch/: ddpg.launch  hydrone_aerial_underwater_deep_rl.launch  sac.launch
hydrone_aerial_underwater_deep_rl/models/obstacle_1/: model.sdf
hydrone_aerial_underwater_deep_rl/scripts/: environment_stage_1.py  respawnGoal.py  velocity.py
hydrone_aerial_underwater_deep_rl/worlds/: stage_1.world  stage_2.world
hydrone_aerial_underwater_description/urdf/: hydrone_aerial_underwater_aerial.gazebo.xacro
hydrone_aerial_underwater_gazebo/launch/: hydrone_aerial_underwater.launch
(+8 files in other folders)
